2016-09-01 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-2-60
	
	* CMakeLists.txt, config.h.cmake,
	  src/CMakeLists.txt
	  src/m_disort.cc, main.cc, methods.cc,
	  3rdparty/CMakeLists.txt,
	  controlfiles/CMakeLists.txt,
	  controlfiles/artscomponents/disort/, TestDISORT.arts, scat_data_disort.xml:
	Removed (buggy) Disort interface and testcase. Refering to ARTS2.3 instead.

2016-07-01  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-59
	
	* cmake/modules/FindNetCDF.cmake:

	Remove unused library dependency on netcdf_c++.

2016-02-16 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-2-58
	
	* controlfiles/planetary_toolbox/includes/venus/atmo_venus.arts:
	Typo fix (thanks to Elisa Castelli for pointing out!).
	
2015-12-17  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-57

	* doc/uguide/common.tex:

	Backport changes from arts-2-3-387:

	Add macro \artsserver with ARTS web url.

	Add macro \artsurl to insert a link to a page on the ARTS web server.
	Only needs the subpath as input.

	Add macro \docserver. Makes it easy in the future to switch from the
	trunk to the stable docserver once ARTS is released.

	Change \builtindoc macro to use the \artsserver and \docserver macros.
	Fixes links still pointing to the old docserver URL at www.sat.ltu.se.
	Thanks Richard for reporting this issue.

	* doc/uguide/arts_developer.tex, doc/uguide/arts_theory.tex,
	doc/uguide/arts_user.tex, doc/uguide/clouds.tex, doc/uguide/concept.tex,
	doc/uguide/development.tex, doc/uguide/scattering.tex:

	Replace all ARTS web URLs with the \artsurl macro.

2015-11-18  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-56

	* src/m_sensor.cc (f_gridFromSensorAMSU, f_gridFromSensorHIRS):

	Use nlinspace instead of linspace. The generated grid might otherwise
	end up one value short due to numerical inaccuracies.
	Fixes bug reported by Max Schaper.

	* doc/index.html.in: Updated.

2015-09-08  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-55
