@@ -56,21 +56,6 @@ extern const Numeric COSMIC_BG_TEMP;
 
 
 
-/* Workspace method: Doxygen documentation will be auto-generated */
-void cloudboxSetFullAtm(//WS Output
-                       Index& cloudbox_on,
-                       ArrayOfIndex& cloudbox_limits,
-                       // WS Input
-                       const Vector& p_grid,
-                       const Verbosity&)
-{
-  cloudbox_on = 1;
-  cloudbox_limits.resize(2); 
-  cloudbox_limits[0] = 0;
-  cloudbox_limits[1] = p_grid.nelem()-1;
-}
-  
-
 /*
 // * Workspace method: Doxygen documentation will be auto-generated * //
 #ifdef ENABLE_DISORT
